# xpipe-python-api

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_clients.py
xpipe_api/: clients.py
