[tool.poetry]
name = "xpipe_api"
version = "0.1.26"
description = "Client for the XPipe API"
authors = ["Clint Olson <coandco@gmail.com>", "Christopher Schnick <crschnick@xpipe.io>"]
repository = "https://github.com/xpipe-io/xpipe-python-api"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
aiohttp-requests = "^0.2.4"
packaging = "^24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
